compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__modules__alias_aliased_constant.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "\nimport rocket_ship.{ x as y }\nconst z = y\n"
---
let
  rocket_ship' = builtins.import ./../rocket_ship.nix;
  y = (builtins.import ./../rocket_ship.nix).x;
  
  z = y;
in { }
