compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__modules__alias_constant.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "\nimport rocket_ship as boop\npub fn go() { boop.x }\n"
---
let
  boop' = builtins.import ./../rocket_ship.nix;
  
  go = { }: boop'.x;
in { inherit go; }
