compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__modules__constant.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "\nimport rocket_ship\npub fn go() { rocket_ship.x }\n"
snapshot_kind: text
---
----- SOURCE CODE

import rocket_ship
pub fn go() { rocket_ship.x }


----- COMPILED NIX
let
  rocket_ship' = builtins.import ./../rocket_ship.nix;
  
  go = { }: rocket_ship'.x;
in
{ inherit go; }
