compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__modules__constant_module_access_with_keyword.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "\nimport rocket_ship\npub const variable = rocket_ship.inherit\n"
---
let
  rocket_ship' = builtins.import ./../rocket_ship.nix;
  
  variable = rocket_ship'.inherit';
in { inherit variable; }
