compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__modules__different_package_import.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "import one\npub fn go() { one.go() }\n"
snapshot_kind: text
---
----- SOURCE CODE
import one
pub fn go() { one.go() }


----- COMPILED NIX
let
  one' = builtins.import ./../../other_package/one.nix;
  
  go = { }: one'.go { };
in
{ inherit go; }
