compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__modules__discarded_duplicate_import.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "\nimport esa/rocket_ship\nimport nasa/rocket_ship as _nasa_rocket\npub fn go() { rocket_ship.go() }\n"
---
let
  rocket_ship' = builtins.import ./../esa/rocket_ship.nix;
  
  go = { }: rocket_ship'.go { };
in { inherit go; }
