compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__modules__discarded_duplicate_import_with_unqualified.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "\nimport esa/rocket_ship\nimport nasa/rocket_ship.{go} as _nasa_rocket\npub fn esa_go() { rocket_ship.go() }\npub fn nasa_go() { go() }\n"
snapshot_kind: text
---
----- SOURCE CODE
-- esa/rocket_ship.gleam
pub fn go() { 1 }

-- nasa/rocket_ship.gleam
pub fn go() { 1 }

-- main.gleam

import esa/rocket_ship
import nasa/rocket_ship.{go} as _nasa_rocket
pub fn esa_go() { rocket_ship.go() }
pub fn nasa_go() { go() }


----- COMPILED NIX
let
  rocket_ship' = builtins.import ./../esa/rocket_ship.nix;
  inherit (builtins.import ./../nasa/rocket_ship.nix) go;
  
  esa_go = { }: rocket_ship'.go { };
  
  nasa_go = { }: go { };
in
{ inherit esa_go nasa_go; }
