compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__modules__import_with_keyword.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "\nimport rocket_ship.{inherit, true as false}\npub fn main() {\n  #(inherit, false)\n}\n"
---
let
  rocket_ship' = builtins.import ./../rocket_ship.nix;
  inherit (builtins.import ./../rocket_ship.nix) inherit';
  false' = (builtins.import ./../rocket_ship.nix).true';
  
  main = { }: [ inherit' false' ];
in
{ inherit main; }
