compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__modules__nested_fn_call.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "import one/two\npub fn go() { two.go() }"
---
let
  two' = builtins.import ./../one/two.nix;
  
  go = { }: two'.go { };
in { inherit go; }
